# thesis

./: .clang-format  .gitignore  .travis.yml  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO.txt  buildserver.sh  client  client.cpp  cmake_install.cmake  compile.sh  covbuild.sh  dati_ecc.txt  flamegraph.sh  laptop_win_cmake.sh  main.cpp  main_orig.cpp  orig.mk  server  server.cpp  server.mk  server.win.mk  tesi.sln  tesi_da_fare.txt  valid_err.txt
cmake/: FindAssimp.cmake  detect_arch.cmake  my_functions.cmake
data/: a.awk
data/fps/: fps.ods
doc/: client-server_communication.txt  geometry_data.txt  resources_handling.txt  tesi_da_fare.txt  tesi_structure.txt
models/wall/: wall.mtl  wall2.mtl
shaders/: 3d.frag  3d.vert  3dfake.vert  PointLight.glsl  base.frag  base.vert  composition.frag  composition.vert  gbuffer.frag  gbuffer.vert  lightsUbo.glsl  skybox.frag  skybox.vert  triangle.vert  viewUbo.glsl
src/: FPSCounter.cpp  FPSCounter.hpp  Vertex.cpp  Vertex.hpp  application.hpp  buffers.cpp  buffers.hpp  camera.cpp  camera.hpp  camera_ctrl.cpp  camera_ctrl.hpp  client_endpoint.cpp  client_endpoint.hpp  config.hpp  data.hpp  endpoint.cpp  endpoint.hpp  endpoint_xplatform.cpp  endpoint_xplatform.hpp  formats.cpp  formats.hpp  model.cpp  model.hpp  phys_device.cpp  phys_device.hpp  server_appstage.cpp  server_appstage.hpp  server_endpoint.cpp  server_endpoint.hpp  swap.cpp  utils.cpp  validation.cpp  validation.hpp  vertex.cpp  vertex.hpp  vulk_errors.hpp  vulk_utils.cpp  vulkan_errors.hpp  window.cpp  window.hpp
src/client/: .buffers.hpp.swo  CMakeLists.txt  application.cpp  application.hpp  buffer_array.cpp  buffer_array.hpp  buffers.cpp  buffers.hpp  camera_ctrl.cpp  camera_ctrl.hpp  client.cpp  client.hpp  client_endpoint.cpp  client_endpoint.hpp  client_main.cpp  client_resources.hpp  client_tcp.cpp  client_tcp.hpp  client_udp.cpp  commands.cpp  commands.hpp  descriptors.cpp  descriptors.hpp  formats.cpp  formats.hpp  gbuffer.cpp  gbuffer.hpp  geometry.cpp  geometry.hpp  images.cpp  images.hpp  materials.cpp  materials.hpp  memory.cpp  memory.hpp  models.hpp  multipass.cpp  multipass.hpp  network_data.cpp  network_data.hpp  (+30 more)
src/common/: CMakeLists.txt  FPSCounter.cpp  bandwidth_limiter.cpp  bandwidth_limiter.hpp  blocking_queue.hpp  camera.cpp  camera.hpp  circular_buffer.hpp  clock.hpp  config.hpp  data.hpp  defer.hpp  endpoint.cpp  endpoint.hpp  endpoint_xplatform.cpp  endpoint_xplatform.hpp  ext_mem_user.hpp  fps_counter.cpp  fps_counter.hpp  frame_data.hpp  frame_utils.hpp  hashing.cpp  hashing.hpp  logging.cpp  logging.hpp  math_utils.hpp  pool_allocator.hpp  profile.hpp  serialization.cpp  serialization.hpp  shared_resources.hpp  stack_allocator.hpp  tcp_messages.hpp  thread_safe.hpp  to_string.hpp  transform.hpp  udp_messages.hpp  units.hpp  utils.cpp  utils.hpp  (+4 more)
src/server/: CMakeLists.txt  batch_send.cpp  batch_send.hpp  geom_update.cpp  geom_update.hpp  model.cpp  model.hpp  queued_update.hpp  rsrc_sending.cpp  rsrc_sending.hpp  server.cpp  server.hpp  server_appstage.cpp  server_appstage.hpp  server_endpoint.cpp  server_endpoint.hpp  server_main.cpp  server_resources.cpp  server_resources.hpp  server_tcp.cpp  server_tcp.hpp  server_udp.cpp  server_udp.hpp  spatial.cpp  spatial.hpp  stack_allocator.hpp  tcp_serialize.cpp  tcp_serialize.hpp  udp_serialize.cpp  udp_serialize.hpp
